@@ -1,10 +1,11 @@
 package com.RDS.skilltree.Config;
 
 import com.RDS.skilltree.Authentication.AuthEntryPoint;
-
 import com.RDS.skilltree.Authentication.CustomAccessDeniedHandler;
 import com.RDS.skilltree.Filters.JWTAuthenticationFilter;
 import com.RDS.skilltree.User.UserRole;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
@@ -12,16 +13,12 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.annotation.web.configurers.oauth2.server.resource.OAuth2ResourceServerConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
-import java.util.List;
 
 @EnableWebSecurity
 @Configuration
@@ -30,8 +27,8 @@ public class SecurityConfig {
     private final AuthEntryPoint authEntryPoint;
     private final CustomAccessDeniedHandler accessDeniedHandler;
 
-
-    public SecurityConfig(AuthEntryPoint authEntryPoint, CustomAccessDeniedHandler accessDeniedHandler) {
+    public SecurityConfig(
+            AuthEntryPoint authEntryPoint, CustomAccessDeniedHandler accessDeniedHandler) {
         this.authEntryPoint = authEntryPoint;
         this.accessDeniedHandler = accessDeniedHandler;
     }
@@ -40,14 +37,26 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
         http.csrf(AbstractHttpConfigurer::disable)
-                .cors(httpSecurityCorsConfigurer -> httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/v1/health").permitAll()
-                        .requestMatchers(HttpMethod.GET,"/v1/**").hasAnyAuthority(UserRole.getAllRoles()) // give read-only access to all
-                        .requestMatchers("/v1/**").hasAnyAuthority(UserRole.USER.name(),UserRole.MEMBER.name(), UserRole.SUPERUSER.name())
-                        .anyRequest().authenticated())
-                .exceptionHandling(ex -> ex.accessDeniedHandler(this.accessDeniedHandler).authenticationEntryPoint(this.authEntryPoint))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+                .cors(
+                        httpSecurityCorsConfigurer ->
+                                httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(
+                        auth ->
+                                auth.requestMatchers("/v1/health")
+                                        .permitAll()
+                                        .requestMatchers(HttpMethod.GET, "/v1/**")
+                                        .hasAnyAuthority(UserRole.getAllRoles()) // give read-only access to all
+                                        .requestMatchers("/v1/**")
+                                        .hasAnyAuthority(
+                                                UserRole.USER.name(), UserRole.MEMBER.name(), UserRole.SUPERUSER.name())
+                                        .anyRequest()
+                                        .authenticated())
+                .exceptionHandling(
+                        ex ->
+                                ex.accessDeniedHandler(this.accessDeniedHandler)
+                                        .authenticationEntryPoint(this.authEntryPoint))
+                .sessionManagement(
+                        session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
         http.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
         return http.build();
@@ -56,9 +65,18 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("https://*.realdevsquad.com", "http://localhost:[*]"));
-        configuration.setAllowedMethods(Arrays.asList(HttpMethod.HEAD.name(), HttpMethod.GET.name(), HttpMethod.POST.name(), HttpMethod.DELETE.name(), HttpMethod.PUT.name()));
-        configuration.setAllowedHeaders(Arrays.asList(HttpHeaders.AUTHORIZATION, HttpHeaders.CACHE_CONTROL, HttpHeaders.CONTENT_TYPE));
+        configuration.setAllowedOriginPatterns(
+                List.of("https://*.realdevsquad.com", "http://localhost:[*]"));
+        configuration.setAllowedMethods(
+                Arrays.asList(
+                        HttpMethod.HEAD.name(),
+                        HttpMethod.GET.name(),
+                        HttpMethod.POST.name(),
+                        HttpMethod.DELETE.name(),
+                        HttpMethod.PUT.name()));
+        configuration.setAllowedHeaders(
+                Arrays.asList(
+                        HttpHeaders.AUTHORIZATION, HttpHeaders.CACHE_CONTROL, HttpHeaders.CONTENT_TYPE));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
